--- a/scilab/modules/gui/src/c/gui.vcxproj
+++ b/scilab/modules/gui/src/c/gui.vcxproj
@@ -197,6 +197,7 @@
     <ClCompile Include="..\..\sci_gateway\cpp\sci_fire_closing_finished.cpp" />
     <ClCompile Include="..\cpp\GetConsoleShowHiddenHandles.cpp" />
     <ClCompile Include="..\cpp\GetUicontrolTooltipString.cpp" />
+    <ClCompile Include="..\cpp\RaiseWindow.cpp" />
     <ClCompile Include="..\cpp\SetConsoleShowHiddenHandles.cpp" />
     <ClCompile Include="..\cpp\SetUicontrolTooltipString.cpp" />
     <ClCompile Include="..\jni\ScilabTermination_wrap.c" />
@@ -425,6 +426,7 @@
     <ClInclude Include="..\..\includes\gw_gui.h" />
     <ClInclude Include="..\..\includes\InitializeGUI.h" />
     <ClInclude Include="..\..\includes\InitUIMenu.h" />
+    <ClInclude Include="..\..\includes\RaiseWindow.h" />
     <ClInclude Include="..\..\includes\SetConsoleShowHiddenHandles.h" />
     <ClInclude Include="..\..\includes\SetUicontrolBackgroundColor.h" />
     <ClInclude Include="..\..\includes\SetUicontrolFontAngle.h" />
