--- a/scilab/modules/gui/src/c/gui.vcxproj.filters
+++ b/scilab/modules/gui/src/c/gui.vcxproj.filters
@@ -392,6 +392,9 @@
     <ClCompile Include="..\..\sci_gateway\cpp\sci_fire_closing_finished.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\cpp\RaiseWindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="core_import.def">
@@ -843,6 +846,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\includes\SetUicontrolTooltipString.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\includes\RaiseWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
